hledger/test/errors/csviftablefieldnames.csv.rules
# if table not using valid CSV field names.
if,date,nosuchfield,description
